# krynter

./: .dockerignore  .gitignore  AGENT.md  DOCS.md  FEATURES.md  INTEGRATION_NOTES.md  Makefile  README.md  TODO_BACKEND.md  docker-compose.yml  handoff.md  pyproject.toml
backend/: Dockerfile  main.py
backend/api/: api.py  user_input_converter.py
backend/core/: config.py  logging.py  utils.py
backend/detailplan_analyzer/: __init__.py  address_scoped.py  addressing.py  analyzer.py  candidate_scoring.py  enrichment.py  extraction.py  field_state.py  llm.py  llm_resolver.py  models.py  pdfs.py  rule_engine.py  rule_policies.py  rule_specs.py  rules.py  value_parsing.py
backend/geo/: __init__.py  constants.py  crs.py  datasets.py  geo.py  noise.py  overlays.py  parcel.py  poi_settings.py  pois.py  serializers.py  spatial.py
backend/tests/: test_detailplan_analyzer.py  test_detailplan_golden.py  test_krynter.py
backend/tests/fixtures/: detailplan_golden_cases.json
data/: default_poi_settings.json  detail_plans.gpkg  heritage_points.gpkg  points_of_interest.gpkg
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js  styles.css
frontend/src/api/: client.js  parcels.js
frontend/src/map/: map.js  styles.css
frontend/src/utils/: utils.js
scripts/: build_vector_tiles.sh  install_local_deps.sh  run_detailplan_llm_resolver.py  run_detailplan_regex_analysis.py  run_sample_detailplan_regex_analysis.py
tests/: test_krynter.py
