[project]
name = "krünter"
version = "0.1.0"
description = ""
authors = [
    {name = "Siim Tišler",email = "siim.tishler@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dataclasses-json (>=0.6.7,<0.7.0)",
    "geopandas (>=1.1.3,<2.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "branca (>=0.8.2,<0.9.0)",
    "folium (>=0.20.0,<0.21.0)",
    "mapclassify (>=2.10.0,<3.0.0)",
    "fastapi[standard] (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "shapely (>=2.1.2,<3.0.0)"
]

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.15,<0.16.0)",
    "black (>=26.5.1,<27.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "lark (>=1.3.1,<2.0.0)"
]

[tool.fastapi]
entrypoint = "backend.main:app"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
