[project]
name = "krünter"
version = "0.1.0"
description = ""
authors = [
    {name = "Siim Tišler",email = "siim.tishler@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "geopandas (>=1.1.3,<2.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pyogrio (>=0.12.1,<0.13.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "pymupdf (>=1.27.2,<2.0.0)",
    "ocrmypdf (>=16.12.0,<17.0.0)"
]

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.15,<0.16.0)",
    "black (>=26.5.1,<27.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "lark (>=1.3.1,<2.0.0)"
]

[tool.fastapi]
entrypoint = "backend.main:app"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: tests that require local data files and cached/detail-plan PDF flow",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
